--- a/JavaClass/JavaClassCh14StringsRegEx/production/JavaBasics/production/JavaClass/pom.xml
+++ b/JavaClass/JavaClassCh14StringsRegEx/production/JavaBasics/production/JavaClass/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Ch23Threads</artifactId>
+    <artifactId>Ch15FileIO</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
